fix: overflow change to content div

--- a/src/ui/components/form/styles.css
+++ b/src/ui/components/form/styles.css
@@ -2,7 +2,6 @@
 .form-header {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  overflow-x: auto;
 }
 
 .tip-container {
